@@ -12,6 +12,10 @@
  */
 //=============================================================================
 
+#include "global_extern.h"
+#include "ast_structure.h"
+#include "ast_union.h"
+
 be_visitor_connector_dds_exh::be_visitor_connector_dds_exh (
       be_visitor_context *ctx)
   : be_visitor_connector_dds_ex_base (ctx)
@@ -40,54 +44,96 @@ be_visitor_connector_dds_exh::visit_connector (be_connector *node)
       return -1;
     }
 
-  this->gen_dds_traits ();
-  this->gen_connector_traits ();
-
-  /// Assumes parent connector exists and is either DDS_State
-  /// or DDS_Event, so we generate inheritance from the
-  /// corresponding template. May have to generalize this logic.
-  os_ << be_nl_2
-      << "class " << this->export_macro_.c_str () << " "
-      << this->node_->local_name () << "_exec_i" << be_idt_nl
-      << ": public " << this->base_tname_ << "_Connector_T";
-
-  AST_Decl **datatype = 0;
-  int status = this->t_args_->get (datatype, 0UL);
-
-  if (status != 0)
+  // If we have a connector within a templated module
+  if (this->t_args_->size () > 0)
     {
-      ACE_ERROR_RETURN ((LM_ERROR,
-                         ACE_TEXT ("be_visitor_connector_dds_exh::")
-                         ACE_TEXT ("gen_dds_traits - ")
-                         ACE_TEXT ("template arg not found\n ")),
-                        -1);
+      // Generate all needed dds_traits
+      for (FE_Utils::T_ARGLIST::CONST_ITERATOR i (*this->t_args_);
+          !i.done ();
+          i.advance ())
+        {
+          AST_Decl **item = 0;
+          i.next (item);
+          AST_Decl *d = *item;
+          if (this->is_dds_type (node, d))
+            {
+              this->gen_dds_traits (d);
+            }
+        }
+
+      // Generate connector traits
+      this->gen_connector_traits ();
+
+      os_ << be_nl_2
+          << "class " << this->export_macro_.c_str () << " "
+          << this->node_->local_name () << "_exec_i" << be_idt_nl
+          << ": public " << this->base_tname_ << "_Connector_T";
+
+      os_ << " <" << be_idt << be_idt_nl;
+
+      os_ << "DDS_" << this->node_->local_name ()
+          << "_Traits," << be_nl;
+
+      size_t slot = 1UL;
+
+      for (FE_Utils::T_ARGLIST::CONST_ITERATOR i (*this->t_args_);
+          !i.done ();
+          i.advance (), ++slot)
+        {
+          AST_Decl **item = 0;
+          i.next (item);
+          AST_Decl *d = *item;
+
+          if (this->is_dds_type (node, d))
+            {
+              os_ << d->name ()
+                  << "_DDS_Traits,";
+            }
+          else
+            {
+              os_ << d->name ();
+            }
+
+          AST_Structure *s = AST_Structure::narrow_from_decl (d);
+          if (s == 0)
+            {
+              AST_Typedef *td = AST_Typedef::narrow_from_decl (d);
+
+              if (td != 0)
+                {
+                  s = AST_Structure::narrow_from_decl (td->primitive_base_type ());
+                }
+            }
+          if (s)
+            {
+              if (s->size_type () == AST_Type::FIXED)
+                {
+                  os_ << be_nl << "true";
+                }
+              else
+                {
+                  os_ << be_nl << "false";
+                }
+            }
+          if (slot < this->t_args_->size ())
+            {
+              os_ << "," << be_nl;
+            }
+        }
+
+      os_ << ">";
+
+      os_ << be_uidt << be_uidt << be_uidt_nl
+          << "{" << be_nl
+          << "public:" << be_idt_nl
+          << this->node_->local_name () << "_exec_i (void);" << be_nl
+          << "virtual ~" << this->node_->local_name ()
+          << "_exec_i (void);" << be_uidt_nl
+          << "};";
+
+      this->gen_exec_entrypoint_decl ();
+
     }
-
-  AST_Type *ut = AST_Type::narrow_from_decl (*datatype);
-
-  os_ << " <" << be_idt << be_idt_nl
-      << "DDS_" << this->node_->local_name ()
-      << "_Traits," << be_nl
-      << this->dds_traits_name_.c_str () << "," << be_nl;
-
-  if (ut->size_type () == AST_Type::FIXED)
-    {
-      os_ << "true>";
-    }
-  else
-    {
-      os_ << "false>";
-    }
-
-  os_ << be_uidt << be_uidt << be_uidt_nl
-      << "{" << be_nl
-      << "public:" << be_idt_nl
-      << this->node_->local_name () << "_exec_i (void);" << be_nl
-      << "virtual ~" << this->node_->local_name ()
-      << "_exec_i (void);" << be_uidt_nl
-      << "};";
-
-  this->gen_exec_entrypoint_decl ();
 
   os_ << be_uidt_nl
       << "}";
@@ -97,9 +143,9 @@ be_visitor_connector_dds_exh::visit_connector (be_connector *node)
   /// it here to catch a port interface that didn't come to
   /// us from an extended port or mirror port.
   for (ACE_Unbounded_Queue<be_interface *>::ITERATOR iter (
-         this->port_ifaces_);
-       !iter.done ();
-       iter.advance ())
+        this->port_ifaces_);
+      !iter.done ();
+      iter.advance ())
     {
       be_interface **item = 0;
       iter.next (item);
@@ -198,36 +244,21 @@ be_visitor_connector_dds_exh::visit_attribute (
 }
 
 void
-be_visitor_connector_dds_exh::gen_dds_traits (void)
+be_visitor_connector_dds_exh::gen_dds_traits (AST_Decl *datatype)
 {
-  /// We depend on the DDS datatype being the first template
-  /// argument for now, this may change.
-  AST_Decl **datatype = 0;
-  int const status = this->t_args_->get (datatype, 0UL);
-
-  if (status != 0)
-    {
-      ACE_ERROR ((LM_ERROR,
-                  ACE_TEXT ("be_visitor_connector_dds_exh::")
-                  ACE_TEXT ("gen_dds_traits - ")
-                  ACE_TEXT ("template arg not found\n ")));
-
-      return;
-    }
-
   AST_Decl *comp_scope =
     ScopeAsDecl (this->node_->defined_in ());
 
-  bool global_comp =
+  bool const global_comp =
     (comp_scope->node_type () == AST_Decl::NT_root);
 
-  UTL_ScopedName *dt_name = (*datatype)->name ();
+  UTL_ScopedName *dt_name = datatype->name ();
   BE_GlobalData::DDS_IMPL the_dds_impl = be_global->dds_impl ();
 
   if (the_dds_impl != BE_GlobalData::NONE)
     {
       os_ << be_nl
-          << "struct " << this->dds_traits_name_.c_str () << be_nl
+          << "struct " << dt_name << "_DDS_Traits" << be_nl
           << "{" << be_idt_nl
           << "typedef ::" << dt_name << " value_type;" << be_nl
           << "typedef ::" << dt_name;
@@ -258,32 +289,6 @@ be_visitor_connector_dds_exh::gen_dds_traits (void)
 void
 be_visitor_connector_dds_exh::gen_connector_traits (void)
 {
-  AST_Decl **dt = 0;
-  int status = this->t_args_->get (dt, 0UL);
-
-  if (status != 0)
-    {
-      ACE_ERROR ((LM_ERROR,
-                  ACE_TEXT ("be_visitor_connector_dds_exh::")
-                  ACE_TEXT ("gen_connector_traits - ")
-                  ACE_TEXT ("first template arg not found\n ")));
-
-      return;
-    }
-
-  AST_Decl **dt_seq = 0;
-  status = this->t_args_->get (dt_seq, 1UL);
-
-  if (status != 0)
-    {
-      ACE_ERROR ((LM_ERROR,
-                  ACE_TEXT ("be_visitor_connector_dds_exh::")
-                  ACE_TEXT ("gen_connector_traits - ")
-                  ACE_TEXT ("second template arg not found\n ")));
-
-      return;
-    }
-
   AST_Decl *comp_scope =
     ScopeAsDecl (this->node_->defined_in ());
 
