@@ -13,7 +13,6 @@
  */
 //=============================================================================
 
-
 #include "global_extern.h"
 
 // ***************************************************************************
